--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,5 @@ dependencies {
     compile 'oauth.signpost:signpost-core:1.2.1.2'
     compile 'oauth.signpost:signpost-commonshttp4:1.2.1.2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.0-groovy-2.4'
 }
